@@ -40,5 +40,13 @@ namespace NativeBuilder
         {
             return Bam.Core.TokenizedString.CreateVerbatim(System.IO.Path.Combine(encapsulatingModule.GetType().Name, currentModule.BuildEnvironment.Configuration.ToString()));
         }
+
+        bool Bam.Core.IBuildModeMetaData.PublishBesideExecutable
+        {
+            get
+            {
+                return false;
+            }
+        }
     }
 }
