@@ -118,5 +118,13 @@ namespace VSSolutionBuilder
         {
             return Bam.Core.TokenizedString.CreateVerbatim(System.IO.Path.Combine(encapsulatingModule.GetType().Name, currentModule.BuildEnvironment.Configuration.ToString()));
         }
+
+        bool Bam.Core.IBuildModeMetaData.PublishBesideExecutable
+        {
+            get
+            {
+                return true;
+            }
+        }
     }
 }
